objects/Flosum__Component__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Branch__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Flosum__Branch__c</referenceTo>
        <relationshipLabel>Branch Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_Link__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;+Id ,  Flosum__Component_Name__c   , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Component Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_Type__c</fullName>
        <label>Component Type</label>
        <picklist>
            <picklistValues>
                <fullName>ApexClass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ApexComponent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApexPage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApexTrigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppMenu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApprovalProcess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AssignmentRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AssignmentRules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoResponseRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoResponseRules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BaseSharingRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CompactLayout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CriteriaBasedSharingRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomApplication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomApplicationComponent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomField</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomLabel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomLabels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomObject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomPageWebLink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomPermission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomTab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DashboardFolder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocumentFolder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EmailFolder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EmailTemplate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EmailTemplateFolder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EntitlementProcess</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flosum__File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Last_Modified_By__c</fullName>
        <description>Last Modification done by user on source org</description>
        <label>Last Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Last_Modified_Date__c</fullName>
        <description>Date the user modified component on source org</description>
        <label>Last Updated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Version__c</fullName>
        <defaultValue>1.0</defaultValue>
        <label>Version</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Component</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Component Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <recordTypes>
        <fullName>Flosum__Branch</fullName>
        <active>true</active>
        <label>Branch</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Repository</fullName>
        <active>true</active>
        <label>Repository</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>